<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="8sp"
    android:layout_marginLeft="8sp"
    android:layout_marginRight="8sp"
    tools:context="ro.stery.loginapplication.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_marginRight="5dp"
            android:src="@drawable/octocat"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="15sp"
            android:padding="10sp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/box">

            <TextView
                android:id="@+id/user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textSize="20sp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/organization"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/company_name"
                android:textStyle="italic"
                android:textSize="15sp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bio_header"
            android:textSize="30sp"
            android:paddingLeft="10sp"/>

        <TextView
            android:id="@+id/bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="italic"
            android:text="@string/bio"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10sp">

        <TextView
            android:id="@+id/profile_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_location"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/location_bucharest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_bucharest"
            android:textSize="20sp"
            android:layout_alignParentRight="true"
            android:textColor="#75aaff"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_below="@id/profile_location"
            android:textSize="20sp"
            android:layout_marginTop="10sp"/>

        <TextView
            android:id="@+id/email_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:layout_below="@id/location_bucharest"
            android:textSize="20sp"
            android:textColor="#75aaff"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10sp"/>

        <TextView
            android:id="@+id/created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_created"
            android:textSize="20sp"
            android:layout_below="@id/email"
            android:layout_marginTop="10sp"
            />

        <TextView
            android:id="@+id/date1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date1"
            android:textSize="20sp"
            android:layout_below="@id/email_address"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10sp"
            android:textColor="#75aaff"/>

        <TextView
            android:id="@+id/modified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_modified"
            android:textSize="20sp"
            android:layout_marginTop="10sp"
            android:layout_below="@id/created"/>

        <TextView
            android:id="@+id/date2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date2"
            android:textSize="20sp"
            android:layout_marginTop="10sp"
            android:layout_below="@id/date1"
            android:layout_alignParentRight="true"
            android:textColor="#75aaff"/>

        <TextView
            android:id="@+id/public_repos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/public_repos"
            android:textSize="20sp"
            android:layout_marginTop="10sp"
            android:layout_below="@id/modified"/>

        <TextView
            android:id="@+id/public_repos_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/public_repos_no"
            android:textSize="20sp"
            android:layout_below="@id/date2"
            android:layout_marginTop="10sp"
            android:layout_alignParentRight="true"
            android:textColor="#75aaff"/>

        <TextView
            android:id="@+id/private_repos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/private_repos"
            android:textSize="20sp"
            android:layout_marginTop="10sp"
            android:layout_below="@+id/public_repos"/>

        <TextView
            android:id="@+id/private_repos_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/private_repos_no"
            android:textSize="20sp"
            android:layout_marginTop="10sp"
            android:layout_below="@id/public_repos_no"
            android:layout_alignParentRight="true"
            android:textColor="#75aaff"/>

        <TextView
            android:id="@+id/btn_create_repo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:layout_marginBottom="20sp"
            android:background="@drawable/create_box"
            android:textSize="30sp"
            android:gravity="center"
            android:text="@string/repo_button_text"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

</LinearLayout>
